fix desktop spacing for dash

--- a/components/dashboard.module.css
+++ b/components/dashboard.module.css
@@ -74,8 +74,8 @@
 .features{
   display: flex;
   flex-direction: row;
-  margin-top: 40px;
-  margin-bottom: 90px;
+  margin-top: 15px;
+  margin-bottom: 65px;
 
 }
 
@@ -109,8 +109,8 @@
   max-width: 80%;
   align-items: center;
   justify-content: center;
-  margin-top: 60px;
-  margin-bottom: 70px;
+  margin-top: 50px;
+  margin-bottom: 55px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -127,7 +127,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-bottom: 80px;
+  margin-bottom: 70px;
 }
 
 .blurbMargins{
@@ -172,7 +172,7 @@
   margin-right: auto;
   align-items: center;
   justify-content: center;
-  margin-bottom: 80px;
+  margin-bottom: 70px;
 }
 
 .captions{
